What you don't see won't hurt you?

--- a/.gitignore
+++ b/.gitignore
@@ -14,4 +14,28 @@ docs/paper/jpegsteg.bbl
 docs/paper/jpegsteg.blg
 docs/paper/jpegsteg.log
 obj-x86_64-linux-gnu/
-
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+config-aux/config.guess
+config-aux/config.sub
+config-aux/depcomp
+config-aux/install-sh
+config-aux/missing
+config.log
+config.status
+configure
+jblock
+jel.pc
+jhist
+jpeg-6b/.dirstamp
+jpegtran
+jquant
+libjel.a
+libjel/.deps/
+libjel/.dirstamp
+libjpeg.a
+unwedge
+wcap
+wedge
